# EyeSpy

./: .gitignore  FileParsing.py  Plots.py  Preprocessing.py  README.md  RunningScript.py  Scrapbook.py  Settings.py  pyproject.toml
Scripts/Analysis/: 2x3FixMapsPlot.py  MooneysOnDisamb.py  NSS.py  NSSAnalysis.py  NSSCrossPhase.py  NSSExporter.py  NSSInventory.py  NSSSVisualiser.py  NSSUtils.py  NSSWithinPhase.py  NewNSS.py  NewNSSExporter.py  OldNSS.py  OldNSSExporter.py  VisualiseCrossPhase.py
Scripts/Analysis/NSS/: CentreGazeTypicality.py  CrossNSSHalvesLinePlot.py  CrossNSSViolinPlot.py  NSS.py  NSSExporter.py  NSSFixationCounts.py
Scripts/Analysis/NSSControlAnalyses/: DiagnoseParticipantCoverage.py  FixationDensityPlot.py  ImagePerParticipant.py  LeftBiasPerParticipant.py  MooneysOnDisamb.py  ParticipantsEffectUCUARanking.py
Scripts/Plots/: CrossNSSViolinPlot.py  FixationVariancePlot.py
Scripts/Preprocessing/: FileParsing.py  Plots.py  Preprocessing.py
src/eyespy/: __init__.py
