[project]
name = "eyespy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sofikrge", email = "150954568+sofikrge@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[project.scripts]
eyespy = "eyespy:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
