[project]
name = "eyespy"
version = "0.1.0"
description = "Eye-tracking analysis pipeline for a Mooney-image / disambiguation consciousness experiment (NSS analyses)."
readme = "README.md"
authors = [
    { name = "sofikrge", email = "150954568+sofikrge@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

# This repo is a collection of analysis scripts, not an installable package,
# so uv treats it as a non-package project (no build backend / entry point).
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
